# openat2-resolve

./: CMakeLists.txt  Containerfile  LICENSE  README.md  main.c  openat2-resolve.c  openat2-resolve.h  parse-argv.c  parse-argv.h
